--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DJANGO_SETTINGS_MODULE=CodeweekApi.settings.dev
+DJANGO_SETTINGS_MODULE=CodeweekApi.settings.production
 SECRET_KEY=xk4eh&6fg8p8rt4q+9@r9^zx$ede5$*p!6o=l1c
 DB_PASSWORD=t*68saku
 SQL_HOST=localhost
